[gd_scene load_steps=7 format=3 uid="uid://d2isvpt74ea7f"]

[ext_resource type="Script" path="res://scripts/ui/menus/track_select.gd" id="1_pxu2p"]
[ext_resource type="Texture2D" uid="uid://dd1t5v6ddjhjx" path="res://assets/images/track_previews/curve_test.png" id="2_i2ugi"]
[ext_resource type="Script" path="res://scripts/ui/menus/curve_test_button.gd" id="3_c81um"]
[ext_resource type="Texture2D" uid="uid://cwm06g85ijsa8" path="res://assets/images/track_previews/donut_test.png" id="3_nfp05"]
[ext_resource type="PackedScene" uid="uid://cmwn78o1aco74" path="res://scenes/ui_scenes/transitions/fade_in.tscn" id="4_bl7co"]
[ext_resource type="AudioStream" uid="uid://cdsqyk0a6o6ka" path="res://assets/sounds/music/sng_menu.mp3" id="6_amqif"]

[node name="TrackSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pxu2p")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.255341, 0.630284, 0.522835, 1)

[node name="curve_test" type="TextureRect" parent="."]
visibility_layer = 2
layout_mode = 0
offset_left = 61.0
offset_top = 55.0
offset_right = 1338.0
offset_bottom = 767.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_i2ugi")

[node name="curve_test_button" type="Button" parent="curve_test"]
show_behind_parent = true
layout_mode = 0
offset_right = 182.45
offset_bottom = 212.0
scale = Vector2(7, 7)
theme_override_font_sizes/font_size = 32
text = "

curve_test"
script = ExtResource("3_c81um")

[node name="donut_test" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 362.0
offset_top = 55.0
offset_right = 1639.0
offset_bottom = 767.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_nfp05")

[node name="donut_test_button" type="Button" parent="donut_test"]
show_behind_parent = true
layout_mode = 0
offset_right = 183.0
offset_bottom = 210.0
scale = Vector2(7, 7)
theme_override_font_sizes/font_size = 32
text = "

donut_test
"

[node name="Go back" type="Button" parent="."]
layout_mode = 0
offset_left = 1147.0
offset_top = 667.0
offset_right = 1280.0
offset_bottom = 720.0
theme_override_font_sizes/font_size = 32
text = "Go Back"

[node name="FadeIn" parent="." instance=ExtResource("4_bl7co")]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_amqif")
autoplay = true

[connection signal="pressed" from="curve_test/curve_test_button" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="donut_test/donut_test_button" to="." method="_on_donut_test_button_pressed"]
[connection signal="pressed" from="Go back" to="." method="_on_go_back_pressed"]
[connection signal="animation_end" from="FadeIn" to="." method="_on_fade_in_animation_end"]
